<?xml version="1.0" encoding="UTF-8"?>
<project>
    <modelVersion>4.0.0</modelVersion>
    <packaging>jar</packaging>
    <name>${artifactId}</name>
    <artifactId>${artifactId}</artifactId>
    <groupId>${groupId}</groupId>
    <version>${version}</version>

    <description>${projectDescription}</description>

    <url>${projectUrl}</url>

    <licenses>
        <license>
            <name>${licenseName}</name>
            <url>${licenseUrl}</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>${organizationName}</name>
        <url>${organizationUrl}</url>
    </organization>

    <scm>
        <url>${projectUrl}</url>
        <connection>${scmUrl}</connection>
        <developerConnection>${scmUrl}</developerConnection>
    </scm>

    <issueManagement>
        <system>Issues</system>
        <url>${bugTrackerUrl}</url>
    </issueManagement>

    <ciManagement>
        <system>Pipelines</system>
        <url>${buildSystemUrl}</url>
    </ciManagement>

    <contributors>
        <contributor>
            <name>Some Contributor</name>
            <email>some.contributor@example.com</email>
            <url>http://example.com/</url>
            <organization>Example Organization</organization>
            <organizationUrl>http://example.com/</organizationUrl>
            <roles>
                <role>scrum-master</role>
            </roles>
            <timezone>Europe/Amsterdam</timezone>
        </contributor>
        <contributor>
            <name>Another Contributor</name>
            <email>another.contributor@example.com</email>
            <url>http://example.com/</url>
            <organization>Example Organization</organization>
            <organizationUrl>http://example.com/</organizationUrl>
            <roles>
                <role>product-owner</role>
            </roles>
            <timezone>Europe/Amsterdam</timezone>
        </contributor>
    </contributors>

    <developers>
        <developer>
            <id>somedev</id>
            <email>some.developer@example.com</email>
            <name>Some Developer</name>
            <organization>Example Organization</organization>
            <organizationUrl>http://example.com/</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>Europe/Amsterdam</timezone>
        </developer>
        <developer>
            <id>otherdev</id>
            <email>other.developer@example.com</email>
            <name>Other Developer</name>
            <organization>Example Organization</organization>
            <organizationUrl>http://example.com/</organizationUrl>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>Europe/Amsterdam</timezone>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <main.class>${package}.HelloWorld</main.class>
        <java.version>11</java.version>
        <junit.jupiter.version>5.4.2</junit.jupiter.version>
        <maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
        <maven.jar.plugin.version>3.1.1</maven.jar.plugin.version>
        <maven.surefire.plugin.version>2.22.1</maven.surefire.plugin.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.jupiter.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>${maven.jar.plugin.version}</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>${main.class}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>

            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
            </plugin>
        </plugins>
    </build>
</project>
